--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,7 @@ set -g prefix C-a
 unbind C-b
 
 # h j k l 切换面板
+set-window-option -g mode-keys vi
 bind-key k select-pane -U
 bind-key j select-pane -D
 bind-key h select-pane -L
@@ -10,6 +11,12 @@ bind-key l select-pane -R
 
 # w 切换窗口
 bind-key w select-window -l
+
+# 分屏
+unbind '"'
+unbind %
+bind \ split -h # 左右分
+bind - split -v # 上下分
 
 # copy mode 为 vim 模式
 setw -g mode-keys vi
