--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,9 @@
 set -g prefix C-a
 unbind C-b
 
+# C-a a = shell的C-a
+bind-key a send-prefix
+
 # h j k l 切换面板
 set-window-option -g mode-keys vi
 bind-key k select-pane -U
@@ -20,3 +23,9 @@ bind - split -v # 上下分
 
 # copy mode 为 vim 模式
 setw -g mode-keys vi
+
+# q 关闭Panel
+bind q killp
+
+# r 重新加载
+bind r source-file ~/.tmux.conf \; display "Configuration Reloaded!"
