--- a/shell/tmux.conf
+++ b/shell/tmux.conf
@@ -22,7 +22,11 @@ bind \ split -h # 左右分
 bind - split -v # 上下分
 
 # copy mode 为 vim 模式
+# 使用v y的vim copy方式 需要先安装:
+# brew install reattach-to-user-namespace
 setw -g mode-keys vi
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # q 关闭Panel
 bind q killp
