--- a/shell/tmux.conf
+++ b/shell/tmux.conf
@@ -33,3 +33,10 @@ bind q killp
 
 # r 重新加载
 bind r source-file ~/.tmux.conf \; display "Configuration Reloaded!"
+
+# pane resizing
+bind ^k resize-pane -U 4
+bind ^j resize-pane -D 4
+bind ^h resize-pane -L 4
+bind ^l resize-pane -R 4
+
