--- a/shell/tmux.conf
+++ b/shell/tmux.conf
@@ -26,7 +26,8 @@ bind - split -v # 上下分
 # brew install reattach-to-user-namespace
 setw -g mode-keys vi
 bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+set -g default-command 'reattach-to-user-namespace $SHELL --login'
 
 # q 关闭Panel
 bind q killp
